--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "test_bootcamp"
+name: test_bootcamp
 output_dir: ../docs
 navbar:
-  title: "test_bootcamp"
+  title: test_bootcamp
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fa-github
+    text: Source code
+    href: https://github.com/stephens999/test_bootcamp
 output:
   workflowr::wflow_html:
     toc: yes
